Opened 14 years ago
Closed 14 years ago
#1906 closed defect (fixed)
caf: noise after seeking with ffplay
| Reported by: | ami_stuff | Owned by: | |
|---|---|---|---|
| Priority: | normal | Component: | avformat |
| Version: | git-master | Keywords: | seek |
| Cc: | Blocked By: | ||
| Blocking: | Reproduced by developer: | yes | |
| Analyzed by developer: | no |
Description
ffplay generates noise after seeking in attached caf file
http://samples.mplayerhq.hu/A-codecs/caf/testcaf3.caf
C:\>ffplay testcaf3.caf
ffplay version N-46469-gc995644 Copyright (c) 2003-2012 the FFmpeg developers
built on Nov 5 2012 17:54:28 with gcc 4.7.2 (GCC)
configuration: --enable-gpl --enable-version3 --disable-pthreads --enable-runt
ime-cpudetect --enable-avisynth --enable-bzlib --enable-frei0r --enable-libass -
-enable-libopencore-amrnb --enable-libopencore-amrwb --enable-libfreetype --enab
le-libgsm --enable-libmp3lame --enable-libnut --enable-libopenjpeg --enable-libo
pus --enable-librtmp --enable-libschroedinger --enable-libspeex --enable-libtheo
ra --enable-libutvideo --enable-libvo-aacenc --enable-libvo-amrwbenc --enable-li
bvorbis --enable-libvpx --enable-libx264 --enable-libxavs --enable-libxvid --ena
ble-zlib
libavutil 52. 5.100 / 52. 5.100
libavcodec 54. 71.100 / 54. 71.100
libavformat 54. 36.100 / 54. 36.100
libavdevice 54. 3.100 / 54. 3.100
libavfilter 3. 21.106 / 3. 21.106
libswscale 2. 1.102 / 2. 1.102
libswresample 0. 16.100 / 0. 16.100
libpostproc 52. 1.100 / 52. 1.100
[caf @ 02af0060] Estimating duration from bitrate, this may be inaccurate
Input #0, caf, from 'testcaf3.caf':
Duration: 00:00:03.01, start: 0.000000, bitrate: 187 kb/s
Stream #0:0: Audio: adpcm_ima_qt (ima4 / 0x34616D69), 44100 Hz, 1 channels,
s16p, 176 kb/s
Seek to 51% ( 0:00:01) of total duration ( 0:00:03) B f=0/0
[adpcm_ima_qt @ 02af60a0] ERROR: step_index[0] = 122= 0B f=0/0
[adpcm_ima_qt @ 02af60a0] ERROR: step_index[0] = 94
[adpcm_ima_qt @ 02af60a0] ERROR: step_index[0] = 104= 0B f=0/0
[adpcm_ima_qt @ 02af60a0] ERROR: step_index[0] = 107= 0B f=0/0
Last message repeated 1 times 0KB vq= 0KB sq= 0B f=0/0
[adpcm_ima_qt @ 02af60a0] ERROR: step_index[0] = 95
[adpcm_ima_qt @ 02af60a0] ERROR: step_index[0] = 108
[adpcm_ima_qt @ 02af60a0] ERROR: step_index[0] = 99
[adpcm_ima_qt @ 02af60a0] ERROR: step_index[0] = 93
[adpcm_ima_qt @ 02af60a0] ERROR: step_index[0] = 94q= 0B f=0/0
[adpcm_ima_qt @ 02af60a0] ERROR: step_index[0] = 119
[adpcm_ima_qt @ 02af60a0] ERROR: step_index[0] = 92
[adpcm_ima_qt @ 02af60a0] ERROR: step_index[0] = 93q= 0B f=0/0
[adpcm_ima_qt @ 02af60a0] ERROR: step_index[0] = 90
[adpcm_ima_qt @ 02af60a0] ERROR: step_index[0] = 92
[adpcm_ima_qt @ 02af60a0] ERROR: step_index[0] = 121= 0B f=0/0
[adpcm_ima_qt @ 02af60a0] ERROR: step_index[0] = 106
[adpcm_ima_qt @ 02af60a0] ERROR: step_index[0] = 104
[adpcm_ima_qt @ 02af60a0] ERROR: step_index[0] = 90q= 0B f=0/0
[adpcm_ima_qt @ 02af60a0] ERROR: step_index[0] = 115
[adpcm_ima_qt @ 02af60a0] ERROR: step_index[0] = 99q= 0B f=0/0
[adpcm_ima_qt @ 02af60a0] ERROR: step_index[0] = 91q= 0B f=0/0
Last message repeated 1 times 0KB vq= 0KB sq= 0B f=0/0
[adpcm_ima_qt @ 02af60a0] ERROR: step_index[0] = 93
[adpcm_ima_qt @ 02af60a0] ERROR: step_index[0] = 123
[adpcm_ima_qt @ 02af60a0] ERROR: step_index[0] = 101= 0B f=0/0
[adpcm_ima_qt @ 02af60a0] ERROR: step_index[0] = 91
Last message repeated 1 times
[adpcm_ima_qt @ 02af60a0] ERROR: step_index[0] = 109
[adpcm_ima_qt @ 02af60a0] ERROR: step_index[0] = 92
[adpcm_ima_qt @ 02af60a0] ERROR: step_index[0] = 108= 0B f=0/0
[adpcm_ima_qt @ 02af60a0] ERROR: step_index[0] = 122
[adpcm_ima_qt @ 02af60a0] ERROR: step_index[0] = 115
[adpcm_ima_qt @ 02af60a0] ERROR: step_index[0] = 89
[adpcm_ima_qt @ 02af60a0] ERROR: step_index[0] = 109
[adpcm_ima_qt @ 02af60a0] ERROR: step_index[0] = 107
[adpcm_ima_qt @ 02af60a0] ERROR: step_index[0] = 91q= 0B f=0/0
Last message repeated 1 times 0KB vq= 0KB sq= 0B f=0/0
[adpcm_ima_qt @ 02af60a0] ERROR: step_index[0] = 107
[adpcm_ima_qt @ 02af60a0] ERROR: step_index[0] = 90
[adpcm_ima_qt @ 02af60a0] ERROR: step_index[0] = 123
[adpcm_ima_qt @ 02af60a0] ERROR: step_index[0] = 98
[adpcm_ima_qt @ 02af60a0] ERROR: step_index[0] = 93q= 0B f=0/0
[adpcm_ima_qt @ 02af60a0] ERROR: step_index[0] = 91
[adpcm_ima_qt @ 02af60a0] ERROR: step_index[0] = 92
Last message repeated 1 times 0KB vq= 0KB sq= 0B f=0/0
[adpcm_ima_qt @ 02af60a0] ERROR: step_index[0] = 115
[adpcm_ima_qt @ 02af60a0] ERROR: step_index[0] = 96
2.46 A-V: 0.000 fd= 0 aq= 0KB vq= 0KB sq= 0B f=0/0
Change History (5)
follow-up: 2 comment:1 by , 14 years ago
| Keywords: | seek added |
|---|---|
| Reproduced by developer: | set |
| Status: | new → open |
| Version: | unspecified → git-master |
comment:2 by , 14 years ago
Replying to cehoyos:
Additionally, ffplay -autoexit does not work for the sample...
This should be fixed in git head.
comment:3 by , 14 years ago
| Component: | undetermined → avformat |
|---|
Looks like it tries binary seeking instead packet one.
comment:4 by , 14 years ago
this happens only with adpcm_ima_qt in caf
ffmpeg -i test.wav -acodec adpcm_ima_qt out.caf
comment:5 by , 14 years ago
| Resolution: | → fixed |
|---|---|
| Status: | open → closed |
Note:
See TracTickets
for help on using tickets.



Reproducible with the following command line:
$ ffmpeg -ss 1 -i testcaf3.caf out.wav
Additionally, ffplay -autoexit does not work for the sample...