cafdec: fix seeking with adpcm

Fixes Ticket1906

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>